# mage-agents

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
scraper/: oracle_magento_2.py
src/mage_agents/: crew.py  main.py
src/mage_agents/config/: agents.yaml  tasks.yaml
src/mage_agents/routes/: api.py
src/mage_agents/static/: script.js
src/mage_agents/templates/: index.html
src/mage_agents/tools/: magento_api_tools.py  magento_tools.py
